# sdlc-agent-test

./: README.md  pyproject.toml
.ai/: issue-11.md  issue-13.md  issue-15.md  issue-17.md  issue-19.md  issue-21.md  issue-23.md  issue-25.md  issue-27.md  issue-29.md  issue-32.md  issue-34.md  issue-36.md  issue-38.md  issue-4.md  issue-40.md  issue-42.md  issue-44.md  issue-46.md  issue-48.md  issue-50.md  issue-52.md  issue-54.md  issue-56.md  issue-58.md  issue-6.md  issue-60.md  issue-9.md
.github/workflows/: ai-reviewer.yml  code-agent.yml  pr-ci.yml
.sdlc-agent/: config.json
src/: __init__.py  config_loader.py  csv_stats.py  palindrome.py  reverse.py  textdiff.py  wordcount.py
src/exporting/: __init__.py  cli.py  text_export.py
src/notebook/: __init__.py  cli.py  models.py  search.py  storage.py
src/reporting/: __init__.py  cli.py  summary.py
src/search/: __init__.py  __main__.py
src/search/tests/: test_search.py
src/tasktracker/: __init__.py  cli.py  models.py  service.py  storage.py
src/todo/: __init__.py  __main__.py  cli.py  models.py  storage.py
tests/: conftest.py  test_cli.py  test_config_loader.py  test_exporting_cli.py  test_models.py  test_notebook_cli.py  test_palindrome.py  test_reporting.py  test_reporting_cli.py  test_reverse.py  test_search.py  test_service.py  test_storage.py  test_tasktracker.py  test_text_export.py  test_todo.py  test_wordcount.py
