# pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "todo-cli"
version = "0.1.0"
description = "Simple todo CLI with JSON storage"
authors = [{name = "Author", email = "author@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = []

[project.scripts]
todo = "src.todo.cli:main"
```
