[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tasktracker"
version = "0.1.0"
description = "Simple task tracker package"
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "freezegun>=1.0",
]

[project.scripts]
tasktracker = "tasktracker.cli:cli"
