[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "existing-code-benchmark"
version = "0.1.0"
description = "Mini project for SDLC Agent benchmark"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "tests*"]

[tool.black]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]